@@ -9,6 +9,8 @@ $ mvn clean compile install -Pwindows/-Plinux/-Pmac
 Classic-Models-Java-EE-8-App packed with features like Java 11 and Java EE 8,javafx and Java 21,rest api,xml,lombok,mapstruct,
 log4j,java network launch protocol - jnlp,openwebstart,materialsfx,validatorfx
 
+set system variable JDK_JAVA_OPTIONS = --illegal-access=warn --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED
+
 Run the "Database Scripts\classic-models.sql" database script against your RDBMS
 
 In this architecture, your business logic,business assets and IT infrastructure
